improve landing page and add link

--- a/src/app/auth-layout/pages/landing-page/landing-page.component.html
+++ b/src/app/auth-layout/pages/landing-page/landing-page.component.html
@@ -30,8 +30,8 @@
     <div class="d-flex flex-column text-center custom-height justify-content-center">
       <div class="content-container">
         <div class="pb-3">
-          <h1 class="text-blue pb-4 font-64-px cursor">Be Grateful!</h1>
-          <h3 class="text-blue pb-3 cursor">Real Solutions to Implement Today to Live Healthy and Live Free</h3>
+          <h1 class="text-blue header-text pb-4 font-64-px cursor">Be Grateful!</h1>
+          <h2 class="text-blue pb-3 cursor">Real Solutions to Implement Today to Live Healthy and Live Free</h2>
         </div>
       <div class="pb-4">
         <h4 class="text-blue text-s m-0">Be Grateful!</h4>
@@ -55,11 +55,11 @@
     <div class="d-flex flex-column text-center pb-4 justify-content-center">
       <div class="content-container">
         <div class="py-3 pt-sm-5">
-          <h3 class="pb-sm-2 cursor">
+          <h2 class="pb-sm-2 cursor">
             <a class="text-blue" href="https://freedom.buzz/" target="_blank">
               DECENTRALIZED FREEDOM OF SPEECH SOCIAL MEDIA
             </a>
-          </h3>
+          </h2>
         </div>
         <a class="image-container" href="https://freedom.buzz/" target="_blank">
           <img src="/assets/landing/freedom.png" class="w-100">
@@ -69,8 +69,8 @@
     <div class="d-flex flex-column text-center pb-4 justify-content-center">
       <div class="content-container">
         <div class="py-3 pt-sm-5">
-          <h3 class="pb-sm-2 cursor">
-            <a class="text-green" href="https://localfoods.market/" target="_blank">WORLDWIDE ORGANIC FOOD SOURCES</a></h3>
+          <h2 class="pb-sm-2 cursor">
+            <a class="text-green" href="https://localfoods.market/" target="_blank">WORLDWIDE ORGANIC FOOD SOURCES</a></h2>
         </div>
         <a class="image-container" href="https://localfoods.market/" target="_blank">
           <img src="/assets/landing/localFood.png" class="w-100">
@@ -80,12 +80,12 @@
     <div class="d-flex flex-column text-center pb-4 justify-content-center">
       <div class="content-container">
         <div class="py-3 pt-sm-5">
-          <h3 class="pb-sm-2 cursor">
+          <h2 class="pb-sm-2 cursor">
             <a class="text-black" href="https://www.lamarslist.com/" target="_blank">
               WORLDWIDE PRODUCTS AND SERVICES PLATFORM <br>
               WITH BARTERING, GOLD, SILVER & DIGITAL ASSETS
             </a>
-          </h3>
+          </h2>
         </div>
         <a class="image-container" href="https://www.lamarslist.com/" target="_blank">
           <img src="/assets/landing/lamarslist.png" class="w-100">
@@ -95,8 +95,8 @@
     <div class="d-flex flex-column text-center pb-4 justify-content-center">
       <div class="content-container">
         <div class="py-3 pt-sm-5">
-          <h3 class="pb-sm-2 cursor">
-            <a class="text-danger" href="https://www.healing.tube/" target="_blank">NATURAL HEALING</a></h3>
+          <h2 class="pb-sm-2 cursor">
+            <a class="text-danger" href="https://www.healing.tube/" target="_blank">NATURAL HEALING</a></h2>
         </div>
         <a class="image-container" href="https://www.healing.tube/" target="_blank">
           <img src="/assets/landing/healing.png" class="w-100">
@@ -106,18 +106,19 @@
     <div class="d-flex flex-column text-center pb-4 justify-content-center">
       <div class="content-container">
         <div class="py-3 pt-sm-5">
-          <h3 class="text-green pb-sm-2 cursor">COVID FAKE-VACCINE DETOX</h3>
+          <h2 class="pb-sm-2 cursor">
+            <a class="text-green" href="https://masterpeacebyhcs.com/" target="_blank">COVID FAKE-VACCINE DETOX</a></h2>
         </div>
-        <div class="image-container">
+        <a href="https://masterpeacebyhcs.com/" target="_blank" class="image-container">
           <img src="/assets/landing/masterpease.png" class="w-100">
-        </div>
+        </a>
       </div>
     </div>
     <div class="d-flex flex-column text-center pb-4 justify-content-center">
       <div class="content-container">
         <div class="py-3 pt-sm-5">
-          <h3 class="pb-sm-2 cursor">
-            <a class="text-blue" href="https://2040.chat/" target="_blank">ECRYPTED MESSAGING HOSTED ON YOUR SERVER</a></h3>
+          <h2 class="pb-sm-2 cursor">
+            <a class="text-blue" href="https://2040.chat/" target="_blank">ECRYPTED MESSAGING HOSTED ON YOUR SERVER</a></h2>
         </div>
         <a class="image-container" href="https://2040.chat/" target="_blank">
           <img src="/assets/landing/2040chat.png" class="w-100">
@@ -127,11 +128,11 @@
     <div class="d-flex flex-column text-center pb-4 justify-content-center">
       <div class="content-container">
         <div class="py-3 pt-sm-5">
-          <h3 class="pb-sm-2 cursor">
+          <h2 class="pb-sm-2 cursor">
             <a class="text-black" href="https://organic.dating/" target="_blank">
               DATING FOR THE UN-VACCINATED
             </a>
-          </h3>
+          </h2>
         </div>
         <a class="image-container" href="https://organic.dating/" target="_blank">
           <img src="/assets/landing/organicdating.png" class="w-100">
@@ -141,11 +142,11 @@
     <div class="d-flex flex-column text-center pb-4 justify-content-center">
       <div class="content-container">
         <div class="py-3 pt-sm-5">
-          <h3 class="text-blue pb-sm-2 cursor">
+          <h2 class="text-blue pb-sm-2 cursor">
             <a class="text-blue cursor" href="https://1776token.com/" target="_blank">
               Non-Fiat Digital Currency to Trade for Food & Products & Services
             </a>
-          </h3>
+          </h2>
         </div>
         <a class="image-container" href="https://1776token.com/" target="_blank">
           <img src="/assets/landing/1776.png" class="w-100">
