Change meta improve image quality and change font size

--- a/src/app/main-layout/landing-page/landing-page.component.html
+++ b/src/app/main-layout/landing-page/landing-page.component.html
@@ -36,9 +36,9 @@
     </div>
     <div class="d-flex flex-column text-center pb-4 justify-content-center">
       <div class="content-container">
-        <div class="py-3 pt-sm-5">
-          <h2 class="pb-sm-2 cursor">
-            <a class="text-blue" href="https://freedom.buzz/" target="_blank">
+        <div class="py-3 pb-sm-4">
+          <h2 class="cursor">
+            <a class="text-blue heading-text" href="https://freedom.buzz/" target="_blank">
               DECENTRALIZED FREEDOM OF SPEECH SOCIAL MEDIA
             </a>
           </h2>
@@ -50,9 +50,9 @@
     </div>
     <div class="d-flex flex-column text-center pb-4 justify-content-center">
       <div class="content-container">
-        <div class="py-3 pt-sm-5">
-          <h2 class="pb-sm-2 cursor">
-            <a class="text-green" href="https://localfoods.market/" target="_blank">WORLDWIDE ORGANIC FOOD SOURCES</a></h2>
+        <div class="py-3 pb-sm-4">
+          <h2 class="cursor">
+            <a class="text-green heading-text" href="https://localfoods.market/" target="_blank">WORLDWIDE ORGANIC FOOD SOURCES</a></h2>
         </div>
         <a class="image-container" href="https://localfoods.market/" target="_blank">
           <img src="/assets/landing/localFood.png" class="w-100">
@@ -61,9 +61,9 @@
     </div>
     <div class="d-flex flex-column text-center pb-4 justify-content-center">
       <div class="content-container">
-        <div class="py-3 pt-sm-5">
-          <h2 class="pb-sm-2 cursor">
-            <a class="text-black" href="https://www.lamarslist.com/" target="_blank">
+        <div class="py-3 pb-sm-4">
+          <h2 class="cursor">
+            <a class="text-black heading-text" href="https://www.lamarslist.com/" target="_blank">
               WORLDWIDE PRODUCTS AND SERVICES PLATFORM <br>
               WITH BARTERING, GOLD, SILVER & DIGITAL ASSETS
             </a>
@@ -76,9 +76,9 @@
     </div>
     <div class="d-flex flex-column text-center pb-4 justify-content-center">
       <div class="content-container">
-        <div class="py-3 pt-sm-5">
-          <h2 class="pb-sm-2 cursor">
-            <a class="text-danger" href="https://www.healing.tube/" target="_blank">NATURAL HEALING</a></h2>
+        <div class="py-3 pb-sm-4">
+          <h2 class="cursor">
+            <a class="text-danger heading-text" href="https://www.healing.tube/" target="_blank">NATURAL HEALING</a></h2>
         </div>
         <a class="image-container" href="https://www.healing.tube/" target="_blank">
           <img src="/assets/landing/healing.png" class="w-100">
@@ -87,9 +87,9 @@
     </div>
     <div class="d-flex flex-column text-center pb-4 justify-content-center">
       <div class="content-container">
-        <div class="py-3 pt-sm-5">
-          <h2 class="pb-sm-2 cursor">
-            <a class="text-green" href="https://masterpeacebyhcs.com/" target="_blank">COVID FAKE-VACCINE DETOX</a></h2>
+        <div class="py-3 pb-sm-4">
+          <h2 class="cursor">
+            <a class="text-green heading-text" href="https://masterpeacebyhcs.com/" target="_blank">COVID FAKE-VACCINE DETOX</a></h2>
         </div>
         <a href="https://masterpeacebyhcs.com/" target="_blank" class="image-container">
           <img src="/assets/landing/masterpease.png" class="w-100">
@@ -98,9 +98,9 @@
     </div>
     <div class="d-flex flex-column text-center pb-4 justify-content-center">
       <div class="content-container">
-        <div class="py-3 pt-sm-5">
-          <h2 class="pb-sm-2 cursor">
-            <a class="text-blue" href="https://2040.chat/" target="_blank">ECRYPTED MESSAGING HOSTED ON YOUR SERVER</a></h2>
+        <div class="py-3 pb-sm-4">
+          <h2 class="cursor">
+            <a class="text-blue heading-text" href="https://2040.chat/" target="_blank">ECRYPTED MESSAGING HOSTED ON YOUR SERVER</a></h2>
         </div>
         <a class="image-container" href="https://2040.chat/" target="_blank">
           <img src="/assets/landing/2040chat.png" class="w-100">
@@ -109,9 +109,9 @@
     </div>
     <div class="d-flex flex-column text-center pb-4 justify-content-center">
       <div class="content-container">
-        <div class="py-3 pt-sm-5">
-          <h2 class="pb-sm-2 cursor">
-            <a class="text-black" href="https://organic.dating/" target="_blank">
+        <div class="py-3 pb-sm-4">
+          <h2 class="cursor">
+            <a class="text-black heading-text" href="https://organic.dating/" target="_blank">
               DATING FOR THE UN-VACCINATED
             </a>
           </h2>
@@ -123,9 +123,9 @@
     </div>
     <div class="d-flex flex-column text-center pb-4 justify-content-center">
       <div class="content-container">
-        <div class="py-3 pt-sm-5">
-          <h2 class="text-blue pb-sm-2 cursor">
-            <a class="text-blue cursor" href="https://1776token.com/" target="_blank">
+        <div class="py-3 pb-sm-4">
+          <h2 class="text-blue cursor">
+            <a class="text-blue heading-text" href="https://1776token.com/" target="_blank">
               Non-Fiat Digital Currency to Trade for Food & Products & Services
             </a>
           </h2>
