--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <router-outlet></router-outlet>
 
-<ng-container *ngIf="isShowScrollTopBtn">
+<!-- <ng-container *ngIf="isShowScrollTopBtn">
   <div class="scroll-to-top rounded" role="button" (click)="shareService.scrollToTop()">
     <fa-icon [icon]="['fas', 'angles-up']" [fixedWidth]="true" />
   </div>
-</ng-container>
+</ng-container> -->
 <!-- <ngx-spinner
   bdColor="rgba(0, 0, 0, 0.5)"
   size="medium"
