Add header image

--- a/src/app/main-layout/landing-page/landing-page.component.html
+++ b/src/app/main-layout/landing-page/landing-page.component.html
@@ -1,16 +1,16 @@
 <div class="main-container bg-color">
   <nav class="navbar navbar-light bg-white px-5 auth-btns">
-    <div class="d-flex flex-column">
+    <div class="d-flex flex-column header-image">
       <img
         src="/assets/begratefultube-logo.png"
-        class="h-60-px"
+        class="h-60-px rounded-3"
       />
     </div>
   </nav>
 
   <div (click)="closeMenu()" class="container">
     <div class="d-flex flex-column text-center custom-height justify-content-center">
-      <div class="content-container">
+      <div class="content-container shadow-sm">
         <div class="pb-3">
           <h1 class="text-blue header-text pb-4 font-64-px cursor">Be Grateful!</h1>
           <h2 class="text-blue pb-3 cursor">Real Solutions to Implement Today to Live Healthy and Live Free</h2>
