--- a/src/app/main-layout/landing-page/landing-page.component.scss
+++ b/src/app/main-layout/landing-page/landing-page.component.scss
@@ -1,8 +1,23 @@
 .main-container {
-  height: 100vh;
+  // height: 100vh;
   // width: 100vw;
   // background: #11134d;
   // width: calc(100vw - 8px);
+
+  .navbar{
+    background-image: url(/assets/img/sky-png-164043817.png);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    z-index: -1;
+
+    .header-image{
+      position: absolute;
+      top: 20px;
+    }
+  }
+
   .content-container {
     display: flex;
     flex-direction: column;
@@ -58,10 +73,10 @@
   }
 
   .custom-height {
-    height: calc(100vh - 70px);
-    // height: calc(100vh - 300px);
+    height: calc(100vh - 20px);
     min-height: 400px;
-
+    position: relative;
+    top: 20px;
     // @media (max-width: 600px) {
     //   min-height: 300px;
     // }
